| Summary: | ASTERISK-20368: res_rtp_asterisk: Eliminate "type-punned pointer" build warning. | ||
| Reporter: | Shaun Ruffell (sruffell) | Labels: | |
| Date Opened: | 2012-09-06 14:54:02 | Date Closed: | 2012-09-10 14:27:07 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Centos 5.8 i686 | Attachments: | ( 0) 0001-res_rtp_asterisk-Eliminate-type-punned-pointer-build.patch |
| Description: | elguero reported on #asterisk-dev: {noformat} History: 1004 svn co http://svn.digium.com/svn/asterisk/trunk asterisk-new 1005 cd asterisk-new/ 1006 ./configure --enable-dev-mode Version: cat /etc/redhat-release CentOS release 5.8 (Final) gcc --version gcc (GCC) 4.1.2 20080704 (Red Hat 4.1.2-52) make: a - output/pjnath-i686-pc-linux-gnu/turn_sock.o ../src/pjturn-srv/allocation.c: In function âsend_allocate_responseâ: ../src/pjturn-srv/allocation.c:218: warning: label âTODO___ADD_RESERVATION_TOKENâ defined but not used [CC] res_rtp_asterisk.c -> res_rtp_asterisk.o cc1: warnings being treated as errors res_rtp_asterisk.c: In function âast_rtp_on_ice_tx_pktâ: res_rtp_asterisk.c:706: warning: dereferencing type-punned pointer will break strict-aliasing rules res_rtp_asterisk.c:710: warning: dereferencing type-punned pointer will break strict-aliasing rules make[2]: *** [res_rtp_asterisk.o] Error 1 make[1]: *** [res] Error 2 make[1]: Leaving directory `/usr/src/asterisk-new' make: *** [_cleantest_all] Error 2 {noformat} | ||
| Comments: | By: Michael L. Young (elguero) 2012-09-06 15:37:44.921-0500 I can confirm that the attached patch resolves this issue. | ||